prevent the iframe from being too short

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -199,4 +199,5 @@ h1 {
   width: 100%;
   border: none;
   overflow: hidden;
+  min-height:100%;
 }
